# try_cmake

./: .travis.yml  CMakeLists.txt  README.md  build.sh
cmake/: global_config.cmake  linux_config.cmake  myc_options.cmake  network_check.cmake  os_option.cmake  version_config.cmake  windows_config.cmake
include/: common.h  version.h
include/boo/: myc_boo.h
include/foo/: myc_foo.h
lib/: CMakeLists.txt
lib/boo/: boo.c  boo.h
lib/foo/: foo.c  foo.h
src/: CMakeLists.txt  main.c
